- fixed: directory browser z-index issue

--- a/public/stylesheets/filebrowser.css
+++ b/public/stylesheets/filebrowser.css
@@ -23,9 +23,9 @@
   }
 
 #dirwrap {
-  width:60%;
+  width:80%;
   top:-30%;
-  left:20%;
+  left:10%;
   min-height:60%;
 
   position:absolute;
