--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -107,7 +107,7 @@ span.ftoggle_box {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.8);
     height: 26px;
     position: relative;
-    z-index:3;
+    z-index:0;
     top: 1px;
     width:50%;
     left:0px;
